<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:background="#000000"
    android:orientation="vertical" >
<TextView 
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/appPref"/>
<LinearLayout 
    android:layout_height="2dp"
    android:layout_width="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">
   </LinearLayout>
   <LinearLayout 
       android:id="@+id/layout_readMsg"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:contentDescription="@string/action_settings"
           android:src="@drawable/ic_btn_dropdown"/>
       <LinearLayout 
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginRight="15dp"
           android:layout_marginEnd="15dp"
           android:orientation="vertical">
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textSize="18sp"
               android:textColor="#ffffff"
               android:text="@string/readmsg"/>
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
        	   android:textColor="#99ffffff"
               android:text="@string/allwReading"/>
       </LinearLayout>
   </LinearLayout>
   <LinearLayout 
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="#000000"
    android:orientation="vertical">
   </LinearLayout>
   
   <LinearLayout 
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="#000000"
    android:orientation="vertical">
   </LinearLayout>
   
       <CheckBox
           android:id="@+id/checkBox_silentMode"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#ffffff"
           android:textSize="18sp"
           android:text="@string/playsilent" />
       
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:background="#000000"
    android:orientation="vertical" >
    
<TextView 
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/ttsPref"/>
<LinearLayout 
    android:layout_height="2dp"
    android:layout_width="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">
   </LinearLayout>
   <LinearLayout 
       android:id="@+id/layout_langSetting"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:contentDescription="@string/action_settings"
           android:src="@drawable/ic_btn_dropdown"/>
       <LinearLayout 
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginRight="15dp"
           android:layout_marginEnd="15dp"
           android:orientation="vertical">
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textSize="18sp"
               android:textColor="#ffffff"
               android:text="@string/setlang"/>
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
        	   android:textColor="#99ffffff"
               android:text="@string/selectlang"/>
       </LinearLayout>
   </LinearLayout>
   <LinearLayout 
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="#000000"
    android:orientation="vertical">
   </LinearLayout>
   <LinearLayout 
       android:id="@+id/layout_tts_speed"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:contentDescription="@string/action_settings"
           android:src="@drawable/ic_btn_dropdown"/>
       <LinearLayout 
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginRight="15dp"
           android:layout_marginEnd="15dp"
           android:orientation="vertical">
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textSize="18sp"
               android:textColor="#ffffff"
               android:text="@string/ttspeed"/>
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
        	   android:textColor="#99ffffff"
               android:text="@string/readingspd"/>
       </LinearLayout>
   </LinearLayout>
   <LinearLayout 
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="#000000"
    android:orientation="vertical">
   </LinearLayout>
   <LinearLayout 
       android:id="@+id/layout_pitcs"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:contentDescription="@string/action_settings"
           android:src="@drawable/ic_btn_dropdown"/>
       <LinearLayout 
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginRight="15dp"
           android:layout_marginEnd="15dp"
           android:orientation="vertical">
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textColor="#ffffff"
               android:textSize="18sp"
               android:text="@string/pitcs"/>
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
        	   android:textColor="#99ffffff"
               android:text="@string/setdegree"/>
       </LinearLayout>
   </LinearLayout>
</LinearLayout>
</LinearLayout>